# django_6_blog

./: .env.deploy.example  .env.example  .env.production.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
api/: admin.py  decorators.py  models.py  package_publish.py  serializers.py  test_api.py  test_api_extended.py  test_api_operational.py  test_cleanup_publish_packages.py  test_publish_package.py  test_remote_media_e2e.py  urls.py  views.py
blog/: admin.py  context_processors.py  dev_media.py  feeds.py  models.py  services.py  session_interactions.py  sitemaps.py  slug_utils.py  test_analytics.py  test_collect_note_assets.py  test_content_strategy.py  test_content_types_timecodes.py  test_dev_media.py  test_filters_and_series.py  test_frontend_quality.py  test_importer_metadata_links.py  test_infra.py  test_model_regressions.py  test_navigation.py  test_obsidian_import.py  test_public_blog.py  test_public_route_smoke.py  test_publication_readiness.py  test_quality_gates.py  test_rendered_links.py  test_seo.py  test_static_delivery.py  test_storage_compat.py  test_ui_feedback.py  tests.py  urls.py  views.py
config/: env.py  settings.py  settings_production.py  urls.py
deploy/: gunicorn.conf.py  release-metadata.schema.json
doc/: README.md  agent-workflow.md  analytics.md  api.md  architecture.md  backup-restore.md  cli.md  content-import.md  deployment.md  development.md  infrastructure.md  kanban.md  media-content.md  navigation.md  public-ui.md  seo.md  timeweb-deployment-preparation.md  user_story.md
instructions/: DOCS.git.instructions.md  (+13 more)
(+281 files in other folders)
