[project]
name = "django-6-blog"
version = "0.1.0"
description = ""
authors = [
    {name = "VladimirMonin",email = "vladimir.monin2016@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=6.0b1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
